@@ -30,20 +30,18 @@ import com.microsoft.azure.projectarcadia.common.ArcadiaSparkComputeManager;
 import com.microsoft.azure.projectarcadia.common.ArcadiaWorkSpace;
 import com.microsoft.azuretools.adauth.AuthException;
 import com.microsoft.azuretools.adauth.PromptBehavior;
-import com.microsoft.azuretools.authmanage.AdAuthManager;
 import com.microsoft.azuretools.authmanage.AuthMethodManager;
 import com.microsoft.azuretools.azurecommons.helpers.NotNull;
 import com.microsoft.azuretools.azurecommons.helpers.Nullable;
 import com.microsoft.azuretools.sdkmanage.AzureManager;
+import org.apache.http.client.utils.URIBuilder;
 import org.apache.http.impl.client.CloseableHttpClient;
 import org.apache.http.impl.client.HttpClients;
 import org.apache.http.message.BasicHeader;
+import org.apache.http.message.BasicNameValuePair;
 
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URL;
-import java.net.UnknownServiceException;
+import java.net.*;
 import java.util.Arrays;
 import java.util.NoSuchElementException;
 import java.util.Optional;
@@ -58,17 +56,24 @@ public class SparkBatchArcadiaSubmission extends SparkBatchSubmission {
     public static final Pattern LIVY_URL_NO_WORKSPACE_IN_HOSTNAME_PATTERN = Pattern.compile(
             "(?<baseUrl>https?://[^/]+)/livyApi/versions/(?<apiVersion>[^/]+)/sparkPools/(?<compute>[^/]+)/?",
             Pattern.CASE_INSENSITIVE);
+    public static final String SYNAPSE_STUDIO_WEB_ROOT_URL = "https://web.azuresynapse.net";
 
     private final @NotNull String workspaceName;
     private final @NotNull String tenantId;
     private final @NotNull URI livyUri;
+    private final @NotNull String jobName;
+    private final @Nullable String webUrl;
 
     public SparkBatchArcadiaSubmission(final @NotNull String tenantId,
                                        final @NotNull String workspaceName,
-                                       final @NotNull URI livyUri) {
+                                       final @NotNull URI livyUri,
+                                       final @NotNull String jobName,
+                                       final @Nullable String webUrl) {
         this.workspaceName = workspaceName;
         this.tenantId = tenantId;
         this.livyUri = UriUtil.normalizeWithSlashEnding(livyUri);
+        this.jobName = jobName;
+        this.webUrl = webUrl;
     }
 
     @Override
@@ -89,7 +94,7 @@ public class SparkBatchArcadiaSubmission extends SparkBatchSubmission {
             throw new AuthException("Not signed in. Can't send out the request.");
         }
 
-        return AdAuthManager.getInstance().getAccessToken(getTenantId(), getResourceEndpoint(), PromptBehavior.Auto);
+        return azureManager.getAccessToken(getTenantId(), getResourceEndpoint(), PromptBehavior.Auto);
     }
 
     @NotNull
@@ -189,15 +194,23 @@ public class SparkBatchArcadiaSubmission extends SparkBatchSubmission {
                                 .findWorkspace(getTenantId(), getWorkspaceName())
                                 .toBlocking()
                                 .first();
-                return new URL(String.format("https://web.azuresynapse.net/monitoring/sparkapplication?" +
-                                "workspace=%s&livyId=%d&sparkPoolName=%s",
-                        workSpace.getId(),
-                        livyId,
-                        matcher.group("compute")));
+                // Currently we just concatenate the string and show it as the Spark job detail page URL.
+                // We don't check if the URL is valid or not because we have never met any exceptions when clicking the
+                // link during test. If there are errors reported by user that URL is invalid in the future, we will
+                // add more validation code here at that time.
+                URI rootUri = URI.create(this.webUrl == null ? SYNAPSE_STUDIO_WEB_ROOT_URL : this.webUrl).resolve("/");
+                return new URIBuilder(rootUri)
+                        .setPath("/monitoring/sparkapplication/" + jobName)
+                        .setParameters(Arrays.asList(
+                                new BasicNameValuePair("workspace", workSpace.getId()),
+                                new BasicNameValuePair("livyId", String.valueOf(livyId)),
+                                new BasicNameValuePair("sparkPoolName", matcher.group("compute"))
+                        )).build().toURL();
             } catch (NoSuchElementException ex) {
                 log().warn(String.format("Can't find workspace %s under tenant %s", getWorkspaceName(), getTenantId()), ex);
-            } catch (MalformedURLException ex) {
-                throw new IllegalArgumentException("Bad Synapse history server URL", ex);
+            } catch (MalformedURLException | URISyntaxException ex) {
+                log().warn("Build Spark job detail web URL failed with error " + ex.getMessage(), ex);
+                throw new IllegalArgumentException("Bad Spark job detail URL", ex);
             }
         }
 
